--- a/book.html
+++ b/book.html
@@ -216,7 +216,7 @@
             messageDiv.innerHTML = `
               ✅ Booking successful!<br>
               📄 Invoice ID: <strong>${invoiceId}</strong><br><br>
-              <a href="https://wa.me/91${form.phone.value}?text=${waMessage}" target="_blank">
+              <a href="https://wa.me/916367225694${form.phone.value}?text=${waMessage}" target="_blank">
                 <button type="button" style="background:#25D366;margin-top:1rem;">Confirm via WhatsApp</button>
               </a>
             `;
